# apm-agent-dotnet

./: .credentials.example.json  .dockerignore  .editorconfig  .gitattributes  .gitignore  .rustfmt.toml  .tool-versions  CHANGELOG.asciidoc  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Directory.Build.props  Directory.Packages.props  Dockerfile  ElasticApmAgent.NetCore.sln  ElasticApmAgent.sln  ElasticApmAgent.sln.DotSettings  Jenkinsfile  Makefile.toml  NOTICE  NOTICE.txt  NuGet.config  README.md  RELEASING.md  __azurite_db_blob__.json  __azurite_db_blob_extent__.json  __azurite_db_queue__.json  __azurite_db_queue_extent__.json  __azurite_db_table__.json  build.bat  build.sh  codecov.yml  coverlet.runsettings  dotnet-tools.json  elasticapm.snk  global.json  update-compose.yaml  updatecli-compose.yaml  xunit.runner.json
.ci/: build.sh  ci.csproj  dependabot.yml  packer_cache.sh  snapshoty.yml  test.sh  tools.sh  update-specs.yml
.github/: .editorconfig  .github.csproj  dependabot.yaml  dependabot.yml  labeler-config.yml
benchmarks/: Directory.Build.props
docs/: api-opentelemetry.asciidoc  changelog.yml  configuration.asciidoc  docs.csproj  docset.yml  index.asciidoc  integrations.asciidoc  intro.asciidoc  log-correlation.asciidoc  logs.asciidoc  metrics.asciidoc  packages.asciidoc  page_header.html  performance-tuning.asciidoc  public-api.asciidoc  redirects.asciidoc  release-notes.asciidoc  setup-asp-dot-net.asciidoc  setup-asp-net-core.asciidoc  setup-auto-instrumentation.asciidoc  setup-azure-functions.asciidoc  setup-dotnet-net-core.asciidoc  setup-web-apps.asciidoc  setup.asciidoc  supported-technologies.asciidoc  troubleshooting.asciidoc  upgrading.asciidoc
sample/: Directory.Build.props
src/elastic_apm_profiler/: Cargo.toml  LICENSE  NOTICE  README  build.rs  elastic_apm_profiler.csproj
src/elastic_apm_profiler/src/: error.rs  ffi.rs  lib.rs  types.rs
src/elastic_apm_profiler/src/cil/: cor.rs  instruction.rs  method.rs  mod.rs  opcode.rs  section.rs
src/elastic_apm_profiler/src/cli/: cor_sig.rs  helpers.rs  il_rewriter.rs  instruction.rs  method.rs  method_header.rs  mod.rs  opcode.rs  section.rs
src/elastic_apm_profiler/src/ffi/: mod.rs  types.rs
src/elastic_apm_profiler/src/interfaces/: icor_profiler_assembly_reference_provider.rs  icor_profiler_callback.rs  icor_profiler_function_control.rs  icor_profiler_function_enum.rs  icor_profiler_info.rs  icor_profiler_method_enum.rs  icor_profiler_module_enum.rs  icor_profiler_object_enum.rs  icor_profiler_thread_enum.rs  imap_token.rs  imetadata_assembly_emit.rs  imetadata_assembly_import.rs  imetadata_dispenser.rs  imetadata_emit.rs  imetadata_import.rs  imethod_malloc.rs  istream.rs  mod.rs
src/elastic_apm_profiler/src/profiler/: calltarget_tokens.rs  cor_profiler.rs  env.rs  helpers.rs  managed.rs  mod.rs  process.rs  profiler.rs  rejit.rs  sig.rs  startup_hook.rs  types.rs
(+3038 files in other folders)
