[workspace]

members = [
    "src/profiler/elastic_apm_profiler",
]

# default release profile: https://doc.rust-lang.org/cargo/reference/profiles.html#release
[profile.release]
lto = true
codegen-units = 1
# Emit a PDB next to the release DLL on Windows so customer crash dumps
# resolve to named frames / source lines. Separate file; DLL is unaffected.
debug = true
# reduce binary size by not unwinding on panic to get a backtrace
#panic = "abort"