[package]
name = "elastic_apm_profiler"
version = "0.1.0"
edition = "2018"
authors = ["Elastic and Contributors"]
description = "Elastic APM .NET agent CLR profiler"
repository = "https://github.com/elastic/apm-agent-dotnet-auto-instrumentation"
keywords = ["elasticsearch", "elastic", "apm", "dotnet"]
license = "Apache-2.0"

[dependencies]
bitflags = "1.2.1"
c_vec = "2.0.0"
com = { git = "https://github.com/russcam/com-rs.git", branch = "master", features = ["production"] }
lazy_static = "1.4.0"
log = "0.4.14"
num-derive = "0.3"
num-traits = "0.2"
rust-crypto = "^0.2"
rust-embed = { version = "5.9.0", features = ["compression", "debug-embed"] }
simple_logger = "1.11.0"
widestring = "0.4.2"

[lib]
crate-type = ["cdylib"]